--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <!-- Support library. -->
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
+
+    <!-- Sfotipy Color palette. -->
+    <color name="primary_dark">#880e4f</color>
+    <color name="primary">#ad1457</color>
+    <color name="accent">#18ffff</color>
 
 </resources>
