Maquetando primera vista

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,7 @@
     <color name="primary_dark">#880e4f</color>
     <color name="primary">#ad1457</color>
     <color name="accent">#18ffff</color>
+    <color name="text_color">#fefefe</color>
+    <color name="background_main">#000000</color>
 
 </resources>
