--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main"
@@ -7,7 +8,7 @@
 
     <ImageView
         android:layout_width="fill_parent"
-        android:layout_height="340dp"
+        android:layout_height="330dp"
         android:scaleType="centerCrop"
         android:id="@+id/imageView"
         android:src="@drawable/header_bg"
@@ -40,12 +41,14 @@
             android:text="@string/welcome_text_footer"
             android:id="@+id/welcome_text_footer"/>
 
-        <ImageButton
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/float_button"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/login"
-            android:background="@drawable/ripple"/>
+            android:layout_marginTop="8dp"
+            fab:fab_icon="@drawable/login"
+            fab:fab_colorNormal="@color/accent"
+            fab:fab_colorPressed="@color/accent" />
     </LinearLayout>
 
 </RelativeLayout>
