--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,6 +22,7 @@
         android:textSize="20sp"
         android:text="@string/welcome_text"
         android:id="@+id/welcome_text"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
     
@@ -43,9 +44,9 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/float_button"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/fab_size"
+            android:layout_height="@dimen/fab_size"
+            android:onClick="OnClick"
             fab:fab_icon="@drawable/login"
             fab:fab_colorNormal="@color/accent"
             fab:fab_colorPressed="@color/accent" />
