--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,17 @@
 
     <ImageView
         android:layout_width="fill_parent"
-        android:layout_height="320dp"
+        android:layout_height="380dp"
         android:scaleType="centerCrop"
         android:id="@+id/imageView"
         android:src="@drawable/header_bg"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:layout_width="wrap_content"
