--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,7 @@
     <color name="accent">#18ffff</color>
     <color name="text_color">#fefefe</color>
     <color name="background_main">#000000</color>
+    <color name="tabsScrollColor">#18ffff</color>
+    <color name="textColorPrimary">#fefefe</color>
 
 </resources>
