--- a/app/src/main/res/layout/activity_my_music.xml
+++ b/app/src/main/res/layout/activity_my_music.xml
@@ -1,31 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ariana.myapplication.MyMusic">
 
     <include
         layout="@layout/toolbar"
         android:id="@+id/my_awesome_toolbar"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"/>
-    
-    <fragment
-        android:name="ariana.myapplication.fragments.DestacadosFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ariana.myapplication.iosched.SlidingTabLayout
+        android:id="@+id/my_awesome_tabs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragment_1"
-        android:layout_below="@+id/my_awesome_toolbar"/>
-    <fragment
-        android:name="ariana.myapplication.fragments.AmigosFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_2"
-        android:layout_below="@+id/fragment_1"/>
-    <fragment
-        android:name="ariana.myapplication.fragments.ProfileFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_3"
-        android:layout_below="@+id/fragment_2"/>
-</RelativeLayout>
+        android:elevation="2dp"
+        android:background="@color/primary"/>
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/my_awesome_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+</LinearLayout>
