--- a/app/src/main/res/layout/activity_my_music.xml
+++ b/app/src/main/res/layout/activity_my_music.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="ariana.myapplication.MyMusic">
 
     <include
@@ -16,12 +16,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
+        android:layout_below="@+id/my_awesome_toolbar"
         android:background="@color/primary"/>
 
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/my_awesome_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/my_awesome_tabs"/>
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/float_button"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="OnClick"
+        fab:fab_icon="@drawable/login"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/fab_colorPressed" />
+</RelativeLayout>
