--- a/app/src/main/res/layout/fragment_destacados.xml
+++ b/app/src/main/res/layout/fragment_destacados.xml
@@ -1,10 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="0dp"
     tools:context="ariana.myapplication.fragments.DestacadosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Destacados Fragment" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_awesome_recycler_song"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
