--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:layout_margin="4dp"
     android:layout_width="fill_parent"
-    android:layout_height="100dp"
+    android:layout_height="120dp"
     card_view:cardCornerRadius="2dp">
 
     <RelativeLayout
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
+            android:textSize="20sp"
             android:id="@+id/title_song"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/record_song"
